--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-image-picker": "^8.2.1",
-    "react-native-katex": "^1.3.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mathjax": "^2.1.2",
+    "react-native-offline": "^6.0.2",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
