--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "NDTExamPrep",
+  "name": "L3EP",
   "version": "0.0.1",
   "private": true,
+  "description": "L3EP - Level 3 Exam Prep: ASNT Level III certification exam preparation app",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean:android": "cd android && ./gradlew clean"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "babel-plugin-module-resolver": "^5.0.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-chart-kit": "^6.12.0",
@@ -52,7 +54,10 @@
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
