--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
+    "format": "prettier --write .",
     "start": "react-native start",
     "test": "jest",
     "clean:android": "cd android && ./gradlew clean"
@@ -48,6 +49,7 @@
     "@react-native-community/cli": "19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.80.1",
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
@@ -58,11 +60,15 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-native": "^4.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^2.8.8",
     "react-test-renderer": "19.1.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
