--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,22 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.ndtexamprep"
+    namespace "com.geckorobotics.l3ep"
     defaultConfig {
-        applicationId "com.ndtexamprep"
+        applicationId "com.geckorobotics.l3ep"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        
+        // Samsung Galaxy optimization
+        renderscriptTargetApi 23
+        renderscriptSupportModeEnabled true
+        
+        // Enable hardware acceleration for better performance on Samsung devices
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
     }
     signingConfigs {
         debug {
