--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,6 +39,13 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+newArchEnabled=true
+
+# Samsung Galaxy optimization
+android.enableR8.fullMode=true
+android.enableShrinkResourcesInReleaseBuilds=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
 
 # Enable GIF support in React Native images (~200 B increase)
 expo.gif.enabled=true
