--- a/package.json
+++ b/package.json
@@ -2,26 +2,29 @@
   "name": "L3EP",
   "version": "0.0.1",
   "private": true,
-  "description": "L3EP - Level 3 Exam Prep: ASNT Level III certification exam preparation app",
+  "description": "L3EP - Level 3 Exam Prep: ASNT Level III certification exam preparation app for Android",
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
     "format": "prettier --write .",
     "start": "react-native start",
     "test": "jest",
-    "clean:android": "cd android && ./gradlew clean"
+    "clean:android": "cd android && ./gradlew clean",
+    "clean:all": "rm -rf node_modules && cd android && ./gradlew clean",
+    "bundle:android": "cd android && ./gradlew bundleRelease",
+    "apk:android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "abort-controller": "^3.0.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-chart-kit": "^6.12.0",
@@ -33,7 +36,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.11.1",
+    "react-native-screens": "^4.13.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.12.0",
@@ -46,17 +49,15 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli": "19.1.0",
     "@react-native-community/cli-platform-android": "19.0.0",
-    "@react-native-community/cli-platform-ios": "19.0.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.80.1",
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.0",
-    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -65,12 +66,15 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "jest": "^29.6.3",
-    "prettier": "^2.8.8",
+    "jest": "^30.0.4",
+    "prettier": "^3.6.2",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
+  },
+  "react-native": {
+    "unstable_enableNewArchitecture": true
   }
 }
