--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@services/*": ["src/services/*"],
       "@models/*": ["src/models/*"],
       "@data/*": ["src/data/*"],
-      "@constants/*": ["src/constants/*"]
+      "@constants/*": ["src/constants/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
