Fix Metro bundler abort-controller issue and app registration name mismatch

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "NDTExamPrep",
+  "name": "L3EP",
   "displayName": "L3EP - Level 3 Exam Prep",
   "androidPackageName": "com.geckorobotics.l3ep"
 }
