--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "abort-controller": "^3.0.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-chart-kit": "^6.12.0",
@@ -37,8 +36,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.0",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-mmkv": "^3.3.0",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
@@ -46,23 +44,26 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@eslint/js": "^9.17.0",
     "@react-native-community/cli": "19.1.0",
     "@react-native-community/cli-platform-android": "19.0.0",
-    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.80.1",
-    "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.57.1",
-    "eslint-config-react-native": "^4.1.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
